Add admin and user routes
